--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "config": "^1.25.1",
     "ect": "^0.5.9",
     "express": "^4.15.2",
+    "request": "^2.81.0",
     "rethinkdb": "^2.3.3",
-    "wunderlist": "^0.1.3"
+    "uuid": "^3.0.1"
   },
   "scripts": {
     "website": "NODE_ENV=production node src/app/website.js"
