--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "express": "^4.15.2",
     "lato-font": "^3.0.0",
     "lodash": "^4.17.4",
+    "lru-cache": "^4.0.2",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "request": "^2.81.0",
+    "request-ip": "^2.0.1",
     "rethinkdb": "^2.3.3",
     "throttled-request": "^0.1.1",
     "uuid": "^3.0.1"
